# django_e_commerce

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt  schema.yaml  schema.yml  settings_fromai.py
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_orderitem_status.py  0003_alter_orderitem_order.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment_created_payment_modified_and_more.py  0003_payment_amount_payment_order_payment_status.py  0004_payment_payment_method.py  0005_remove_payment_card_holder_name_and_more.py  0006_alter_payment_user.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_price_alter_product_stock.py  0003_alter_product_tags_category_product_category.py  0004_alter_category_parent.py  0005_alter_category_parent.py  0006_alter_category_options_category_created_and_more.py  0007_remove_product_sku_remove_product_price_and_more.py  0008_alter_productitem_table.py  0009_alter_productitem_options_alter_productitem_table.py  0010_alter_category_options_and_more.py  0011_alter_productitem_product.py  0012_alter_productitem_price.py
shopping_cart/: admin.py  models.py  serializers.py  urls.py  views.py
shopping_cart/migrations/: 0001_initial.py
